# BazelSeleniumSample

./: .bazelrc  .bazelversion  BUILD.bazel  README.md  WORKSPACE  browser_test.py  gazelle_python.yaml  requirements_lock.txt  webtest_test.py
.github/workflows/: test.yml
browsers/: BUILD.bazel  chromium-no-headless.json
